Adding authorization and authentication

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ProductDb;Username=postgres;Password=1111"
+  },
+  "Jwt": {
+    "Key": "THIS_IS_A_VERY_SECRET_KEY_123456789",
+    "Issuer": "MyApi",
+    "Audience": "MyApiUser",
+    "DurationInMinutes": 60
   }
 }
+  
